-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.1, 5.11.2
-
Qt 5.6 (dae77465d1a96d7a6c4fd21e9cd92dc11d5ff68b), Windows 8.1
-
cfdbfcebbda5f26b89c70df6b191b17ef242e9d7 (qt/qtbase/dev)
Here's a minimal example:
import QtQuick 2.1 import QtQml.StateMachine 1.0 Item { id: root signal mySignal Component.onCompleted: { machine.start() } Timer { interval: 100 running: true onTriggered: root.mySignal() } StateMachine { id: machine childMode: QState.ParallelStates State { id: parentState initialState: firstState SignalTransition { signal: root.mySignal; targetState: otherState } State { id: otherState; onEntered: console.log("entered otherstate");} State { id: firstState; onEntered: console.log("entered firststate"); } } } }
When running:
$ $ ~/build/qt5.5/qtbase/bin/qmlscene /tmp/test.qml
qml: entered firststate
Unrecoverable error detected in running state machine: No common ancestor for targets and source of transition from state ''
ASSERT: "domain != 0" in file statemachine/qstatemachine.cpp, line 785
Aborted (core dumped)